Fix: search bar register on ios safari

--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -54,6 +54,11 @@
           width: 70%;
           height: 2vw;
           text-align: center;
+          -webkit-user-select: text;
+          -moz-user-select: text;
+          -ms-user-select: text;
+          -khtml-user-select: text;
+          user-select: text;
         }
         .search-modal-submit-button {
           width: 70%;
